test(service): cover service layer with unit test (83% coverage)